OO-3584: widen access to course in coaching tool, show the status